--- a/Views/Shared/AdminLTE/_MainNavigation.cshtml
+++ b/Views/Shared/AdminLTE/_MainNavigation.cshtml
@@ -46,6 +46,15 @@ else
                         </a>
                     </li>
                 }
+
+                li class="nav-item ">
+                <a asp-controller="Home" asp-action="DashboardV2" class="nav-link @Url.MakeActiveClass("home","dashboardv2")">
+                    <i class="nav-icon fas fa-lock"></i>
+                    <p>
+                        Dashboard V2
+                    </p>
+                </a>
+                </li>
             </ul>
         </nav>
     </div>
