--- a/Views/Shared/AdminLTE/_Styles.cshtml
+++ b/Views/Shared/AdminLTE/_Styles.cshtml
@@ -1,3 +1,13 @@
-﻿<link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
+﻿@* <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
 <link rel="stylesheet" href="~/css/adminlte.min.css">
 <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+<link rel="stylesheet" href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css"> *@
+
+<!-- Google Font: Source Sans Pro -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
+<!-- Font Awesome Icons -->
+<link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
+<!-- overlayScrollbars -->
+<link rel="stylesheet" href="~/plugins/overlayScrollbars/css/OverlayScrollbars.min.css">
+<!-- Theme style -->
+<link rel="stylesheet" href="~/css/adminlte.min.css">
